scripts/nullaway/annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8.txt
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/Load.java:29: error: [NullAway] enhanced-for expression command is @Nullable
        for(String cmd : command){
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/Menu.java:51: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    end.execute(game, null);
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/Menu.java:76: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    end.execute(game, null);
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/Menu.java:99: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    end.execute(game, null);
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/GameImpl.java:25: error: [NullAway] method returns @Nullable, but superclass method commands.Game.getGameState() returns @NonNull
    public GameState getGameState(){
                     ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/GameImpl.java:43: error: [NullAway] dereferenced expression usedCommand is @Nullable
        usedCommand.execute(this, com);
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/GameImpl.java:50: error: [NullAway] dereferenced expression game is @Nullable
            game.setBackPack(4);
                ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/GameImpl.java:371: error: [NullAway] method returns @Nullable, but superclass method commands.Game.getCurrentRoom() returns @NonNull
    public Room getCurrentRoom() {
                ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/GameImpl.java:392: error: [NullAway] method returns @Nullable, but superclass method commands.Game.getBackPack() returns @NonNull
    public BackPack getBackPack() {
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/Pick.java:85: error: [NullAway] dereferenced expression itemC is @Nullable
                        itemC.removeItem(item);
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/commands/Pick.java:92: error: [NullAway] dereferenced expression itemC2 is @Nullable
                        itemC2.removeItem(item);
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/NPC/Eorlund.java:29: error: [NullAway] dereferenced expression game.getCurrentRoom().getNorth() is @Nullable
            System.out.println("Find me in " + game.getCurrentRoom().getNorth().getName() +" and get your reward");
                                                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/rooms/RoomImpl.java:31: error: [NullAway] initializer method does not guarantee @NonNull field shortC (line 27) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public RoomImpl(String nname, String ndescr){
           ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/rooms/RoomImpl.java:47: error: [NullAway] method returns @Nullable, but superclass method rooms.Room.getItem(java.lang.String) returns @NonNull
    public Item getItem(String name) {
                ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/rooms/RoomImpl.java:212: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return south;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url6da19b5a7a_krakrak_Adventure_Game_tgz-pJ8-adventure_MainJ8/src/rooms/RoomImpl.java:275: error: [NullAway] method returns @Nullable, but superclass method rooms.Room.getSecretExit() returns @NonNull
    public Room getSecretExit(){
                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
